<resources>
    <string name="app_name">PostProyects</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="lowercase_letters">Letras en minusculas</string>
    <string name="uppercase_letters">Letras en mayusculas</string>
    <string name="digits">Digitos / numeros</string>
    <string name="special_characters">Caracteres especiales</string>
    <string name="long_characters">Minimo 8 caracteres/letras</string>
    <string name="msj_go_post_proyect">Para acceder a esta funcion y más inicie sesión</string>
    <string name="msj_error_conection">Error al conectarse con el servidor intentelo más tarde</string>
    <string name="msj_error_empty_data">No se encontraron publicacionciones</string>
    <string name="msj_token_empty">Inicie sesion para esta función y más</string>
</resources>