<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.fragments.menu_main.ListOfFollowFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/svProyectos"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:justificationMode="inter_word"
                android:text="Filtros" />

            <ImageView
                android:id="@+id/btn_filters"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_angulo_pequeno_hacia_abajo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/data_filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:justificationMode="inter_word"
                android:text="Tipo de proyecto:" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:singleSelection="true">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:justificationMode="inter_word"
                android:text="Estado de proyecto:" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:singleSelection="true"></com.google.android.material.chip.ChipGroup>

        </LinearLayout>

    </LinearLayout>
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:indeterminate="true"
        android:visibility="invisible"
        tools:visibility="visible" />
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swip_proyects"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_proyects"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/error_find_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:translationY="200dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/not_found" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/msj_error_empty_data" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/error_load_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:translationY="200dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/error_128px" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/msj_error_conection" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/error_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:translationY="200dp"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/madera" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/msj_token_empty" />
            </LinearLayout>
        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>